--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="title-container">
-        <h1>Find a local yum stress-free!</h1>
+        <h1>Find a local yum, stress-free!</h1>
     </div>
     <form id="foodForm">
         <div>
